drivers/card/K2616_Dll.h

int __stdcall K2616_AT45DB041Read(HANDLE ComHandle, int  _Address, BYTE _BlockData[]);
int __stdcall K2616_AT45DB041Write(HANDLE ComHandle, int  _Address, BYTE _BlockData[264]);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_AT88SC102Reset(HANDLE ComHandle);
int __stdcall K2616_AT88SC102VerifyPWD(HANDLE ComHandle, BYTE _PWData[2]);
int __stdcall K2616_AT88SC102Read(HANDLE ComHandle, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC102Security1Erasure(HANDLE ComHandle, BYTE _Address, BYTE _dataLen);
int __stdcall K2616_AT88SC102Security2ErasureApp1(HANDLE ComHandle,BYTE _Security2App1PW[6]);
int __stdcall K2616_AT88SC102Security2ErasureApp2(HANDLE ComHandle,BYTE _EC2, BYTE _Security2App2PW[4]);
int __stdcall K2616_AT88SC102Write(HANDLE ComHandle, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC102WritePWD(HANDLE ComHandle, BYTE _PWType,BYTE _PWData[]);
int __stdcall K2616_AT88SC102SetMode(HANDLE ComHandle, BYTE _CtrlMode);
int __stdcall K2616_AT88SC102DisableEC2(HANDLE ComHandle);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_AT88SC1604Reset(HANDLE ComHandle);
int __stdcall K2616_AT88SC1604VerifyPWD(HANDLE ComHandle, BYTE _PWType, BYTE _PWData[]);
int __stdcall K2616_AT88SC1604Read(HANDLE ComHandle,  int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC1604Erasure(HANDLE ComHandle, int _Address, BYTE _dataLen);
int __stdcall K2616_AT88SC1604Write(HANDLE ComHandle, int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC1604WritePWD(HANDLE ComHandle, BYTE _PWType,BYTE _PWData[]);
int __stdcall K2616_AT88SC1604Personalization(HANDLE ComHandle,BYTE _PM);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_AT88SC1608Reset(HANDLE ComHandle);
int __stdcall K2616_AT88SC1608VerifyPWD(HANDLE ComHandle, BYTE _PWType, BYTE _PWData[]);