apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_AT45DB041Read(HANDLE, int, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:136</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT45DB041Read(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer)} and {@link #K2616_AT45DB041Read(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT45DB041Read(HANDLE ComHandle, int _Address, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT45DB041Read(HANDLE, int, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:136</i>
	 */
	int K2616_AT45DB041Read(HANDLE ComHandle, int _Address, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT45DB041Write(HANDLE, int, BYTE[264])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:137</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT45DB041Write(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer)} and {@link #K2616_AT45DB041Write(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT45DB041Write(HANDLE ComHandle, int _Address, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT45DB041Write(HANDLE, int, BYTE[264])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:137</i>
	 */
	int K2616_AT45DB041Write(HANDLE ComHandle, int _Address, ByteBuffer _BlockData);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT88SC102Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:139</i>
	 */
	int K2616_AT88SC102Reset(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_AT88SC102VerifyPWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:140</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AT88SC102VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102VerifyPWD(HANDLE ComHandle, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC102VerifyPWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:140</i>
	 */
	int K2616_AT88SC102VerifyPWD(HANDLE ComHandle, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC102Read(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:141</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_AT88SC102Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102Read(HANDLE ComHandle, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC102Read(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:141</i>
	 */
	int K2616_AT88SC102Read(HANDLE ComHandle, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC102Security1Erasure(HANDLE, BYTE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:142</i>
	 */
	int K2616_AT88SC102Security1Erasure(HANDLE ComHandle, byte _Address, byte _dataLen);
	/**
	 * Original signature : <code>int K2616_AT88SC102Security2ErasureApp1(HANDLE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:143</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102Security2ErasureApp1(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AT88SC102Security2ErasureApp1(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102Security2ErasureApp1(HANDLE ComHandle, Pointer _Security2App1PW);
	/**
	 * Original signature : <code>int K2616_AT88SC102Security2ErasureApp1(HANDLE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:143</i>
	 */
	int K2616_AT88SC102Security2ErasureApp1(HANDLE ComHandle, ByteBuffer _Security2App1PW);
	/**
	 * Original signature : <code>int K2616_AT88SC102Security2ErasureApp2(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:144</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102Security2ErasureApp2(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC102Security2ErasureApp2(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102Security2ErasureApp2(HANDLE ComHandle, byte _EC2, Pointer _Security2App2PW);
	/**
	 * Original signature : <code>int K2616_AT88SC102Security2ErasureApp2(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:144</i>
	 */
	int K2616_AT88SC102Security2ErasureApp2(HANDLE ComHandle, byte _EC2, ByteBuffer _Security2App2PW);
	/**
	 * Original signature : <code>int K2616_AT88SC102Write(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:145</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_AT88SC102Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102Write(HANDLE ComHandle, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC102Write(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:145</i>
	 */
	int K2616_AT88SC102Write(HANDLE ComHandle, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC102WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:146</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC102WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC102WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC102WritePWD(HANDLE ComHandle, byte _PWType, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC102WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:146</i>
	 */
	int K2616_AT88SC102WritePWD(HANDLE ComHandle, byte _PWType, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC102SetMode(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:147</i>
	 */
	int K2616_AT88SC102SetMode(HANDLE ComHandle, byte _CtrlMode);
	/**
	 * Original signature : <code>int K2616_AT88SC102DisableEC2(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:148</i>
	 */
	int K2616_AT88SC102DisableEC2(HANDLE ComHandle);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT88SC1604Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:150</i>
	 */
	int K2616_AT88SC1604Reset(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_AT88SC1604VerifyPWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:151</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1604VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC1604VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1604VerifyPWD(HANDLE ComHandle, byte _PWType, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604VerifyPWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:151</i>
	 */
	int K2616_AT88SC1604VerifyPWD(HANDLE ComHandle, byte _PWType, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Read(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:152</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1604Read(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_AT88SC1604Read(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1604Read(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Read(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:152</i>
	 */
	int K2616_AT88SC1604Read(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Erasure(HANDLE, int, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:153</i>
	 */
	int K2616_AT88SC1604Erasure(HANDLE ComHandle, int _Address, byte _dataLen);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Write(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:154</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1604Write(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_AT88SC1604Write(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1604Write(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Write(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:154</i>
	 */
	int K2616_AT88SC1604Write(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:155</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1604WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC1604WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1604WritePWD(HANDLE ComHandle, byte _PWType, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:155</i>
	 */
	int K2616_AT88SC1604WritePWD(HANDLE ComHandle, byte _PWType, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1604Personalization(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:156</i>
	 */
	int K2616_AT88SC1604Personalization(HANDLE ComHandle, byte _PM);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT88SC1608Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:158</i>
	 */
	int K2616_AT88SC1608Reset(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_AT88SC1608VerifyPWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:159</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC1608VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608VerifyPWD(HANDLE ComHandle, byte _PWType, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608VerifyPWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:159</i>
	 */
	int K2616_AT88SC1608VerifyPWD(HANDLE ComHandle, byte _PWType, ByteBuffer _PWData);
